feat(slider-block): extend slider block with additional config options for carousel blocks

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 @import "swiper/css/autoplay";
 @import "swiper/css/navigation";
 @import "swiper/css/pagination";
+@import "swiper/css/scrollbar";
 
 .wp-block-wpe-slider {
 	--swiper-theme-color: var(--wp--preset--color--accent, var(--wp--preset--color--primary));
